Use -header-filter to specify headers.
Specifying -header-filter makes clang-tidy report errors also in header files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -534,6 +534,7 @@ if(CLANG_TIDY)
         COMMAND
             ${CLANG_TIDY}
             -checks=${LINT_CHECKS_STR}
+            -header-filter=${INCLUDE_DIR}
             ${LINT_SOURCE_FILE}
             --
             ${LINT_CXX_FLAGS}
