--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,10 @@ endif(APPLE)
 
 project(VELES C CXX)
 if(WIN32)
-  if(CMAKE_GENERATOR MATCHES "Win64$")
-    cmake_minimum_required(VERSION 3.7.0)
-  else(CMAKE_GENERATOR MATCHES "Win64$")
-    message(FATAL_ERROR "Windows 32-bit is not supported due to performance problems")
-  endif(CMAKE_GENERATOR MATCHES "Win64$")
+  if(CMAKE_SIZEOF_VOID_P EQUAL 4)
+    message(FATAL_ERROR "Windows 32-bit is not supported due to performance problems in msgpack")
+  endif()
+  cmake_minimum_required(VERSION 3.7.0)
 else(WIN32)
   cmake_minimum_required(VERSION 3.1.0)
 endif(WIN32)
