Fix deployment folder in Windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,13 +62,22 @@ endif(APPLE)
 
 if(WIN32)
   set(WINDOWS_APPLICATION_OUT_DIRECTORY "Veles UI")
-  # Overwrite default Debug/Release application directory.
+  # Overwrite default Debug/Release/RelWithDebInfo/MinSizeRel application directory.
+  # We can't use CMAKE_RUNTIME_OUTPUT_DIRECTORY, because it appends config type do the path.
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${WINDOWS_APPLICATION_OUT_DIRECTORY})
   set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${WINDOWS_APPLICATION_OUT_DIRECTORY})
   set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+
   set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${WINDOWS_APPLICATION_OUT_DIRECTORY})
   set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${WINDOWS_APPLICATION_OUT_DIRECTORY})
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${WINDOWS_APPLICATION_OUT_DIRECTORY})
 endif(WIN32)
 
 # Sources
@@ -595,16 +604,23 @@ if(WIN32)
   find_program(WINDEPLOYQT_EXECUTABLE NAMES windeployqt HINTS ${QTDIR} ENV QT PATH_SUFFIXES bin)
   add_custom_command(
       TARGET main_ui POST_BUILD
-      COMMENT "Ensuring Qt Dependencies"
+      COMMENT "Ensuring Qt dependencies"
       COMMAND ${WINDEPLOYQT_EXECUTABLE} ${WINDEPLOYQT_ARGS} $<TARGET_FILE:main_ui>
       DEPENDS $<TARGET_FILE:main_ui>
   )
-  install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/windeploydir/" DESTINATION ${WINDOWS_APPLICATION_OUT_DIRECTORY} COMPONENT "application")
+  # Copy winddeployqt output to the directory with the main UI binary.
+  install(DIRECTORY ${WIN_DEPLOY_DIR} DESTINATION ${WINDOWS_APPLICATION_OUT_DIRECTORY} COMPONENT "application")
+  add_custom_command(
+      TARGET main_ui POST_BUILD
+      COMMAND ${CMAKE_COMMAND} -E copy_directory "${WIN_DEPLOY_DIR}" "${WINDOWS_APPLICATION_OUT_DIRECTORY}"
+      DEPENDS $<TARGET_FILE:main_ui>
+  )
+
   install(TARGETS main_ui RUNTIME DESTINATION ${WINDOWS_APPLICATION_OUT_DIRECTORY} COMPONENT "application")
   set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "ExecWait '\\\"$INSTDIR\\\\${WINDOWS_APPLICATION_OUT_DIRECTORY}\\\\${VCREDIST_BINARY}\\\" /install /passive'")
   install(FILES "${OPENSSL_DLL_DIR}/libeay32.dll" "${OPENSSL_DLL_DIR}/ssleay32.dll" DESTINATION ${WINDOWS_APPLICATION_OUT_DIRECTORY} COMPONENT "application")
-  add_custom_command(TARGET main_ui POST_BUILD
-      COMMAND ${CMAKE_COMMAND} -E make_directory ${WINDOWS_APPLICATION_OUT_DIRECTORY}
+  add_custom_command(
+      TARGET main_ui POST_BUILD
       COMMAND ${CMAKE_COMMAND} -E copy_if_different
           "${OPENSSL_DLL_DIR}/libeay32.dll"
           "${OPENSSL_DLL_DIR}/ssleay32.dll"
