Add mocks - disasm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -726,3 +726,19 @@ set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Veles tool for binary data analysis")
 set(CPACK_MONOLITHIC_INSTALL)
 set(CPACK_STRIP_FILES false)
 include(CPack)
+
+
+add_executable(disasm_test
+    ${MSGPACK_CPP_HEADER}
+    ${INCLUDE_DIR}/ui/disasm/disasm.h
+    ${INCLUDE_DIR}/ui/disasm/mocks.h
+    ${INCLUDE_DIR}/ui/disasm/asmgen.h
+    ${SRC_DIR}/ui/disasm/disasm.cc
+    ${SRC_DIR}/data/bindata.cc
+    ${SRC_DIR}/ui/disasm/mocks.cc
+    ${SRC_DIR}/ui/disasm/asmgen.cc
+    ${SRC_DIR}/util/random.cc
+    ${TEST_DIR}/disasm_test.cc
+)
+add_dependencies(disasm_test msgpack-c)
+qt5_use_modules(disasm_test Core)
