--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -361,6 +361,8 @@ add_executable(main_ui
     ${INCLUDE_DIR}/ui/connectionmanager.h
     ${INCLUDE_DIR}/ui/color_picker_button.h
     ${INCLUDE_DIR}/ui/disasm/disasmtab.h
+    ${INCLUDE_DIR}/ui/disasm/disasmwidget.h
+    ${INCLUDE_DIR}/ui/disasm/addresscolumn.h
     ${INCLUDE_DIR}/ui/dockwidget.h
     ${INCLUDE_DIR}/ui/dockwidget_native.h
     ${INCLUDE_DIR}/ui/hexeditwidget.h
@@ -393,6 +395,8 @@ add_executable(main_ui
     ${SRC_DIR}/ui/connectionmanager.cc
     ${SRC_DIR}/ui/color_picker_button.cc
     ${SRC_DIR}/ui/disasm/disasmtab.cc
+    ${SRC_DIR}/ui/disasm/disasmwidget.cc
+    ${SRC_DIR}/ui/disasm/addresscolumn.cc
     ${SRC_DIR}/ui/dockwidget.cc
     ${SRC_DIR}/ui/dockwidget_native.cc
     ${SRC_DIR}/ui/hexeditwidget.cc
