--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: cpp
 matrix:
   include:
-    - compiler: clang
-      os: osx
-    - compiler: clang
-      os: linux
-    - compiler: gcc
-      os: linux
+    - os: osx
+    - os: linux
+      sudo: required
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install qt5; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:beineri/opt-qt57-trusty; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq g++-6 qt57-meta-full; fi
 script:
   - mkdir build
   - cd build
