--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@ language: cpp
 matrix:
   include:
     - os: osx
+      env:
+        - PKG_CONFIG_PATH=/usr/local/opt/qt/lib/pkgconfig
     - os: linux
       sudo: required
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install qt5; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository --yes ppa:beineri/opt-qt591-trusty; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq g++-6 qt59-meta-full; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -qq g++-6 qt59-meta; fi
 script:
   - mkdir build
   - cd build
