--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install qt5; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew upgrade python; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clang-tools-extra || true; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clang-tidy || true; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clang-format || true; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install clang-format; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then .travis/install-osx-gtest.sh; fi
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then docker build -f test/build/Dockerfile .; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then mkdir build ; cd build; cmake .. ; make -j2; make -j2 lint; fi
