WIP - please uncommit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -389,6 +389,7 @@ add_executable(main_ui
     ${INCLUDE_DIR}/ui/docks/dock.h
     ${INCLUDE_DIR}/ui/docks/tabwidget.h
     ${INCLUDE_DIR}/ui/docks/tabbar.h
+    ${INCLUDE_DIR}/ui/docks/dragger.h
     ${SRC_DIR}/ui/main.cc
     ${SRC_DIR}/ui/logwidget.cc
     ${SRC_DIR}/ui/veles_mainwindow.cc
@@ -420,6 +421,7 @@ add_executable(main_ui
     ${SRC_DIR}/ui/docks/dock.cc
     ${SRC_DIR}/ui/docks/tabwidget.cc
     ${SRC_DIR}/ui/docks/tabbar.cc
+    ${SRC_DIR}/ui/docks/dragger.cc
     ${RESOURCES}
     ${VISUALIZATION_SHADERS}
     ${FORMS}
